manifests/mutating-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: add-toleration-nodeaffinity
webhooks:
  - name: add-toleration.kube-system.svc
    clientConfig:
      service:
        name: add-toleration-webhook
        namespace: kube-system
        path: "/mutate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lRY1NVSDB5NTR2TGF1OUVBZmo5YmZGekFOQmdrcWhraUc5dzBCQVFzRkFEQXgKTVM4d0xRWURWUVFERXlaaFpHUXRkRzlzWlhKaGRHbHZiaTEzWldKb2IyOXJMbXQxWW1VdGMzbHpkR1Z0TG5OMgpZekFlRncweU5ERXdNakV3TkRBd05EaGFGdzB5TlRBeE1Ua3dOREF3TkRoYU1ERXhMekF0QmdOVkJBTVRKbUZrClpDMTBiMnhsY21GMGFXOXVMWGRsWW1odmIyc3VhM1ZpWlMxemVYTjBaVzB1YzNaak1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXlIZkw0REZPN3dWUno3dUdGTG9ubS9SdnpUTG5RL0pIbFZUMQozcGtxdTF3Ukh2 [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: kube-system
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
